--- a/pom.xml
+++ b/pom.xml
@@ -202,7 +202,21 @@
         <!--<artifactId>log4j-slf4j-impl</artifactId>-->
         <!--<version>2.7</version>-->
     <!--</dependency>-->
-
+    <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>18.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-redis</artifactId>
+        <version>1.4.1.RELEASE</version>
+    </dependency>
+    <dependency>
+        <groupId>redis.clients</groupId>
+        <artifactId>jedis</artifactId>
+        <version>2.5.1</version>
+    </dependency>
 
 </dependencies>
 </project>
