--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,10 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-jetty</artifactId>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjrt -->
     <dependency>
         <groupId>org.aspectj</groupId>
@@ -210,12 +213,12 @@
     <dependency>
         <groupId>org.springframework.data</groupId>
         <artifactId>spring-data-redis</artifactId>
-        <version>1.4.1.RELEASE</version>
+        <version>1.8.4.RELEASE</version>
     </dependency>
     <dependency>
         <groupId>redis.clients</groupId>
         <artifactId>jedis</artifactId>
-        <version>2.5.1</version>
+        <version>2.9.0</version>
     </dependency>
 
 </dependencies>
