--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 rest.host=127.0.0.1
 rest.user=test
 rest.password=test
+#可以通过@Value注解注入到bean中
+name=chejinqiang
+#为应用程序提供管理特性，对外提供SpringApplicationAdminMXBean
+spring.application.admin.enabled=true
