--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ rest.password=test
 name=chejinqiang
 #为应用程序提供管理特性，对外提供SpringApplicationAdminMXBean
 spring.application.admin.enabled=true
+#设置启动debug模式
+debug=false
+#日志级别配置：logging.level.loggerName
+logging.level.root=info
+
+org.springframework.boot.logging.LoggingSystem=Log4j2
